# context-allocator

./: Cargo.toml  LICENSE  NOTES  README.md
src/: AllocToAllocatorAdaptor.rs  Allocator.rs  AllocatorAdaptor.rs  AllocatorState.rs  BitmapAllocator.rs  BumpAllocator.rs  ContextAllocator.rs  CurrentAllocatorInUse.rs  GlobalAllocToAllocatorAdaptor.rs  GlobalThreadAndCoroutineSwitchableAllocator.rs  GlobalThreadAndCoroutineSwitchableAllocatorInstance.rs  GloballyAllocated.rs  LargeAllocator.rs  LayoutHack.rs  LifetimeHint.rs  LocalAllocator.rs  LocalAllocatorMemoryUsage.rs  MemoryAddress.rs  MemoryRange.rs  MultipleBinarySearchTreeAllocator.rs  NonNullExt.rs  PerThreadState.rs  RcMemorySource.rs  lib.rs
src/adaptors/: AllocRefToAllocatorAdaptor.rs  AllocToAllocatorAdaptor.rs  AllocatorAdaptor.rs  GlobalAllocToAllocatorAdaptor.rs  alloc.rs  alloc_ref.rs  global_alloc.rs  mod.rs
src/allocators/: Allocator.rs  BumpAllocator.rs  ContextAllocator.rs  MemoryMapAllocator.rs  MemoryUsageTrackingThreadLocalAllocator.rs  MultipleBinarySearchTreeAllocator.rs  mod.rs
src/allocators/binary_search_trees/: BinarySearchTreeWithCachedKnowledgeOfFirstChild.rs  BinarySearchTreesWithCachedKnowledgeOfFirstChild.rs  MultipleBinarySearchTreeAllocator.rs  mod.rs
src/allocators/bit_set/: AbsoluteLocationInBitSet.rs  BitSetAllocator.rs  BitSetWord.rs  BitSetWordPointer.rs  BitsInAByte.rs  mod.rs
src/allocators/global/: GlobalThreadAndCoroutineSwitchableAllocator.rs  GlobalThreadAndCoroutineSwitchableAllocatorInstance.rs  mod.rs  (+5 more)
src/arena/: mod.rs
src/arena_memory_source/: ArenaMemorySource.rs  UnallocatedBlock.rs
src/binary_search_trees/: BinarySearchTreeWithCachedKnowledgeOfFirstChild.rs  BinarySearchTreesWithCachedKnowledgeOfFirstChild.rs  mod.rs
src/bit_set/: BitSetAllocator.rs  BitSetWordPointer.rs  BlockSize.rs  NumberOfBitSetWords.rs  NumberOfBits.rs  NumberOfBytes.rs  RelativeLocationInBitSet.rs  mod.rs
src/dead/: Bitmap.rs  BitmapAllocator.rs  LinkedListAllocator.rs
src/extensions/: LayoutHack.rs  NonNullExt.rs  NonNullU8Ext.rs  NonNullU8NodePointer.rs  NonZeroU32Ext.rs  NonZeroUsizeExt.rs  PointerExt.rs  PointerMutExt.rs  U64Ext.rs  UsizeExt.rs  logarithm_base2_as_usize.rs  mod.rs  non_null_pointer.rs  non_zero_u32_difference_as_usize.rs  non_zero_u32_right_shift_as_u32.rs  non_zero_usize.rs
src/global/: CurrentAllocatorInUse.rs  GlobalThreadAndCoroutineSwitchableAllocator.rs  LocalAllocator.rs  MemoryRange.rs  PerThreadState.rs  global_thread_and_coroutine_switchable_allocator.rs  mod.rs
src/memory_sources/: CoroutineHeapMemory.rs  CoroutineHeapMemorySource.rs  CoroutineStackMemory.rs  MemoryMapSource.rs  MemorySource.rs  RcMemorySource.rs  mod.rs
src/mmap/: HugePageSize.rs  MemoryMapAllocator.rs  mod.rs
src/numa_mmap_memory/: NumaAllocationPolicy.rs  NumaMemoryMapAllocator.rs  NumaNodeBitSet.rs  mod.rs
src/regular_mmap_memory/: HugePageSize.rs  MemoryMapAllocator.rs  mod.rs
(+26 files in other folders)
