# This file is part of context-allocator. It is subject to the license terms in the COPYRIGHT file found in the top-level directory of this distribution and at https://raw.githubusercontent.com/lemonrock/context-allocator/master/COPYRIGHT. No part of context-allocator, including this file, may be copied, modified, propagated, or distributed except according to the terms contained in the COPYRIGHT file.
# Copyright © 2019 The developers of context-allocator. See the COPYRIGHT file in the top-level directory of this distribution and at https://raw.githubusercontent.com/lemonrock/context-allocator/master/COPYRIGHT.


[package]
name = "context-allocator"
description = "context-allocator"
keywords = ["context-allocator"]
categories = []
license = "MIT"
authors = ["Raphael Cohn <raphael.cohn@stormmq.com>"]
homepage = "https://github.com/lemonrock/context-allocator"
repository = "https://github.com/lemonrock/context-allocator.git"
exclude = ["*"]
include = ["README.md", "LICENSE", "COPYRIGHT", "src/**/*.rs", "Cargo.toml", "rustfmt.toml", "clippy.toml"]
readme = "README.md"
publish = true
edition = '2018'
version = "0.3.0"

[dependencies]
static_assertions = "^1.1"

[target.'cfg(target_os = "linux")'.dependencies]
either = { version = "^1.5.3", features = ["serde"] }
errno = "^0.2"
libc = { version = "^0.2.69", features = ["const-extern-fn", "extra_traits", "std"] }
likely = "^0.1.0"
linux-support = { path = "../linux-support", version = "^0.0.2" }
